--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </head>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-<body style="background-color: rgb(64, 138, 167);">
+<body onload="random()" style="background-color: rgb(64, 138, 167);">
 
 <p class=center style="font-size: 48px;">X-Pool: Cross-Modal Language-Video Attention for Text-Video Retrieval</p>
 
