--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
       font-size: 24px;
       font-family: "Times New Roman";
     }
+    .abstract {
+      margin-left: 1.5%;
+      margin-right: auto;
+      width: 100%;
+      padding: 50px;
+      text-align: center;
+      font-size: 24px;
+      font-family: "Times New Roman";
+    }
     /* .center {
       margin: auto;
       width: 60%;
@@ -47,7 +56,7 @@
 
 <p class=center style="font-size: 48px;">X-Pool: Cross-Modal Language-Video Attention for Text-Video Retrieval</p>
   
-<p class=center>
+<p class=abstract>
 In text-video retrieval, the objective is to learn a cross-
 modal similarity function between a text and a video that
 ranks relevant text-video pairs higher than irrelevant pairs.
@@ -73,7 +82,7 @@ VTT, MSVD and LSMDC, achieving new state-of-the-art re-
 sults by up to 8% in relative improvement in Recall@1. Our
 findings thereby highlight the importance of joint text-video
 reasoning to extract important visual cues according to text.
-<\p>
+</p>
 
 <div class="center">
   <button id="generate_button" name="Generate" value="Generate" onclick="random()" style="font-size: 24px; font-family: 'Times New Roman'">
