--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     }
     .abstract {
       width: 100%;
-      padding: 200px;
+      padding-left: 200px;
+      padding-right: 200px;
       text-align: center;
       font-size: 24px;
       font-family: "Times New Roman";
@@ -54,6 +55,7 @@
 
 <p class=center style="font-size: 48px;">X-Pool: Cross-Modal Language-Video Attention for Text-Video Retrieval</p>
   
+<p class=center style="font-size: 32px;">Abstract</p>   
 <p class=abstract>
 In text-video retrieval, the objective is to learn a cross-
 modal similarity function between a text and a video that
