--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       width: 100%;
       padding-left: 200px;
       padding-right: 200px;
-      text-align: center;
+      text-align: left;
       font-size: 24px;
       font-family: "Times New Roman";
     }
