--- a/index.html
+++ b/index.html
@@ -57,33 +57,13 @@
   
 <p class=center style="font-size: 32px;">Abstract</p>   
 <p class=abstract>
-In text-video retrieval, the objective is to learn a cross-
-modal similarity function between a text and a video that
-ranks relevant text-video pairs higher than irrelevant pairs.
-However, videos inherently express a much wider gamut of
-information than texts. Instead, texts often capture sub-
-regions of entire videos and are most semantically similar to
-certain frames within videos. Therefore, for a given text, a
-retrieval model should focus on the text’s most semantically
-similar video sub-regions to make a more relevant compar-
-ison. Yet, most existing works aggregate entire videos with-
-out directly considering text. Common text-agnostic ag-
-gregations schemes include mean-pooling or self-attention
-over the frames, but these are likely to encode misleading vi-
-sual information not described in the given text. To address
-this, we propose a cross-modal attention model called X-
-Pool that reasons between a text and the frames of a video.
-Our core mechanism is a scaled dot product attention for a
-text to attend to its most semantically similar frames. We
-then generate an aggregated video representation condi-
-tioned on the text’s attention weights over the frames. We
-evaluate our method on three benchmark datasets of MSR-
-VTT, MSVD and LSMDC, achieving new state-of-the-art re-
-sults by up to 8% in relative improvement in Recall@1. Our
-findings thereby highlight the importance of joint text-video
-reasoning to extract important visual cues according to text.
+In text-video retrieval, the objective is to learn a cross-modal similarity function between a text and a video that ranks relevant text-video pairs higher than irrelevant pairs. However, videos inherently express a much wider gamut of information than texts. Instead, texts often capture sub-regions of entire videos and are most semantically similar to certain frames within videos. Therefore, for a given text, a retrieval model should focus on the text’s most semantically similar video sub-regions to make a more relevant comparison. Yet, most existing works aggregate entire videos without directly considering text. Common text-agnostic aggregations schemes include mean-pooling or self-attention over the frames, but these are likely to encode misleading visual information not described in the given text. To address this, we propose a cross-modal attention model called X-Pool that reasons between a text and the frames of a video. Our core mechanism is a scaled dot product attention for a text to attend to its most semantically similar frames. We then generate an aggregated video representation conditioned on the text’s attention weights over the frames. We evaluate our method on three benchmark datasets of MSR-VTT, MSVD and LSMDC, achieving new state-of-the-art results by up to 8% in relative improvement in Recall@1. Our findings thereby highlight the importance of joint text-video reasoning to extract important visual cues according to text.
 </p>
 
+<p class=abstract>
+The following demo shows the attentions weights that X-Pool assigns to each frame given a text query:
+</p>
+  
 <div class="center">
   <button id="generate_button" name="Generate" value="Generate" onclick="random()" style="font-size: 24px; font-family: 'Times New Roman'">
     Generate
@@ -146,7 +126,7 @@ reasoning to extract important visual cues according to text.
 <br>
 
 <div class="center">
-  <p id="caption"> a person is connecting something to system </p>
+  <p id="caption"> Text Query: a person is connecting something to system </p>
 </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -184,7 +164,7 @@ reasoning to extract important visual cues according to text.
     // update caption
     var caption = document.getElementById('caption');
     var new_caption = msrvtt_json[num]['sentence'];
-    caption.innerHTML = new_caption;
+    caption.innerHTML = 'Text Query: ' + new_caption;
 
     // update chart
     // This is the speed in which the loop occurs
