--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ In text-video retrieval, the objective is to learn a cross-modal similarity func
 </p>
 
 <p class=center>
-The following demo shows the attentions weights that X-Pool assigns to each frame given a text query:
+The following demo shows the attentions weights that X-Pool assigns to the frames a video given a text query
 </p>
   
 <div class="center">
@@ -71,7 +71,8 @@ The following demo shows the attentions weights that X-Pool assigns to each fram
 </div>
   
 <div class="center">
-  <p id="caption"> Text Query: a person is connecting something to system </p>
+  <p id="caption"> 
+    <span style="color: #42ad50">Text Query:</span>a person is connecting something to system </p>
 </div>
 
 <div class="center">
