--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
     // update caption
     var caption = document.getElementById('caption');
     var new_caption = msrvtt_json[num]['sentence'];
-    caption.innerHTML = 'Text Query: ' + new_caption;
+    caption.innerHTML = '<span style="color: #42ad50">Text Query: </span>' + new_caption;
 
     // update chart
     // This is the speed in which the loop occurs
