--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
   
 <div class="center">
   <p id="caption"> 
-    <span style="color: #42ad50">Text Query:</span>a person is connecting something to system </p>
+    <span style="color: #ad4442">Text Query: </span>a person is connecting something to system </p>
 </div>
 
 <div class="center">
@@ -163,7 +163,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
     // update caption
     var caption = document.getElementById('caption');
     var new_caption = msrvtt_json[num]['sentence'];
-    caption.innerHTML = '<span style="color: #42ad50">Text Query: </span>' + new_caption;
+    caption.innerHTML = '<span style="color: #ad4442">Text Query: </span>' + new_caption;
 
     // update chart
     // This is the speed in which the loop occurs
@@ -186,7 +186,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
           datasets: [
               {
                   label: "",
-                  backgroundColor: "rgba(66, 173, 80, 1)",
+                  backgroundColor: "rgba(173, 68, 66, 1)",
                   data: set
               }
           ]
