--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <body onload="random()" style="background-color: rgb(168, 225, 247);">
 
-<p class=center style="font-size: 48px;">X-Pool: Cross-Modal Language-Video Attention for Text-Video Retrieval</p>
+  <p class=center style="font-size: 48px; color: #ad4442;">X-Pool</p>
+  <p class=center style="font-size: 48px;">Cross-Modal Language-Video Attention for Text-Video Retrieval</p>
   
 <p class=center style="font-size: 32px;">Abstract</p>   
 <p class=abstract>
@@ -61,7 +62,7 @@ In text-video retrieval, the objective is to learn a cross-modal similarity func
 </p>
 
 <p class=center>
-The following demo shows the attentions weights that X-Pool assigns to the frames a video given a text query
+The following demo shows the attentions weights that X-Pool assigns to the frames a video given a particular text 
 </p>
   
 <div class="center">
