--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
   
 <div class="center">
   <p id="caption"> 
-    <span style="color: #ad4442"><strong>Text Query: </strong></span>a person is connecting something to system </p>
+    <span style="color: #ad4442"><strong>Text: </strong></span>a person is connecting something to system </p>
 </div>
 
 <div class="center">
@@ -164,7 +164,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
     // update caption
     var caption = document.getElementById('caption');
     var new_caption = msrvtt_json[num]['sentence'];
-    caption.innerHTML = '<span style="color: #ad4442"><strong>Text Query: </strong></span>' + new_caption;
+    caption.innerHTML = '<span style="color: #ad4442"><strong>Text: </strong></span>' + new_caption;
 
     // update chart
     // This is the speed in which the loop occurs
