--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
 </p>
   
 <div class="center">
-  <button id="generate_button" name="Generate" value="Generate" onclick="random()" style="font-size: 24px; font-family: 'Times New Roman'">
+  <button id="generate_button" name="Generate" value="Generate" onclick="random()" style="font-size: 24px; font-family: 'Times New Roman'; color: #ad4442;">
     Generate
   </button>
 </div>
