--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
   
 <div class="center">
   <button id="generate_button" name="Generate" value="Generate" onclick="random()" style="font-size: 24px; font-family: 'Times New Roman'; color: #ad4442;">
-    Generate
+    <strong>Generate</strong>
   </button>
 </div>
   
