--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ In text-video retrieval, the objective is to learn a cross-modal similarity func
 </p>
 
 <p class=center>
-The following demo shows the attentions weights that X-Pool assigns to the frames a video given a particular text. All text-video pairs are taken from the MSR-VTT 1K-A test set.
+The following demo shows the attentions weights that X-Pool assigns to the frames a video given a particular text. All text-video pairs are generated from the MSR-VTT 1K-A test set.
 </p>
   
 <div class="center">
