--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     * {
       box-sizing: border-box;
     }
-    
     .img-container {
       float: left;
       width: 8%;
@@ -28,25 +27,19 @@
       margin-left: 1.5%;
       margin-right: auto;
       width: 100%;
-      padding: 10px;
+      padding: 5%;
       text-align: center;
       font-size: 24px;
       font-family: "Times New Roman";
     }
     .abstract {
       width: 100%;
-      padding-left: 200px;
-      padding-right: 200px;
-      text-align: left;
+      padding-left: 20%;
+      padding-right: 20%;
+      text-align: justify;
       font-size: 24px;
       font-family: "Times New Roman";
     }
-    /* .center {
-      margin: auto;
-      width: 60%;
-      padding: 10px;
-    } */
-
     </style>
     </head>
 
