--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       font-family: "Times New Roman";
     }
     .abstract {
+      margin-left: 1.5%;
       width: 100%;
       padding-left: 20%;
       padding-right: 20%;
