--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       margin-left: 1.5%;
       margin-right: auto;
       width: 100%;
-      padding: 5%;
+      padding-left: 5%;
+      padding-right: 5%;
+      padding-top: 10px;
+      padding-bottom: 10px;
       text-align: center;
       font-size: 24px;
       font-family: "Times New Roman";
