--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ In text-video retrieval, the objective is to learn a cross-modal similarity func
 </p>
 
 <p class=abstract>
-The following demo shows the attentions weights that X-Pool assigns to the frames a video given a particular text. All text-video pairs are generated from the MSR-VTT 1K-A test set.
+The following demo shows the attentions weights that X-Pool assigns to the frames a video given a particular text. All text-video pairs are generated from the MSR-VTT dataset's 1K-A test split.
 </p>
   
 <div class="center">
@@ -69,10 +69,12 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
   
 <div class="center">
   <p id="caption"> 
-    <span style="color: #ad4442"><strong>Text: </strong></span>a person is connecting something to system </p>
+    <span style="color: #ad4442"><strong>Text: </strong></span>a person is connecting something to system 
+  </p>
 </div>
 
 <div class="center">
+  <p><span style="color: #ad4442"><strong>Video:</strong></span></p>
   <video id="vid" width="320" height="240" autoplay muted loop>
       <source src="https://msrvtt.s3.ca-central-1.amazonaws.com/videos/video9770.mp4" type="video/mp4">
     Your browser does not support the video tag.
