--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
       font-size: 24px;
       font-family: "Times New Roman";
     }
+    .center2 {
+      margin-left: 1.5%;
+      margin-right: auto;
+      width: 100%;
+      padding-left: 5%;
+      padding-right: 5%;
+      text-align: center;
+      font-size: 24px;
+      font-family: "Times New Roman";
+    }
     .abstract {
       margin-left: 1.5%;
       width: 100%;
@@ -74,7 +84,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
 </div>
 
 <div class="center">
-  <p><span style="color: #ad4442"><strong>Video:</strong></span></p>
+  <p class="center2"><span style="color: #ad4442"><strong>Video:</strong></span></p>
   <video id="vid" width="320" height="240" autoplay muted loop>
       <source src="https://msrvtt.s3.ca-central-1.amazonaws.com/videos/video9770.mp4" type="video/mp4">
     Your browser does not support the video tag.
