--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
   </button>
 </div>
   
-<div>
+<!-- <div>
   <p class="center2"><span style="color: #ad4442"><strong>Text</strong></span></p>
   <p class="center" id="caption">a person is connecting something to system</p>
-</div>
+</div> -->
 
-<div>
-  <p class="center2"><span style="color: #ad4442"><strong>Video</strong></span></p>
+<div class="center">
+  <p class="center" id="caption">a person is connecting something to system</p>
   <video class="center" id="vid" width="320" height="240" autoplay muted loop>
       <source src="https://msrvtt.s3.ca-central-1.amazonaws.com/videos/video9770.mp4" type="video/mp4">
     Your browser does not support the video tag.
