--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
 </div> -->
 
 <div class="center">
-  <p class="center" id="caption">a person is connecting something to system</p>
-  <video class="center" id="vid" width="320" height="240" autoplay muted loop>
+  <p id="caption">a person is connecting something to system</p>
+  <p style="float: right;"><video id="vid" width="320" height="240" autoplay muted loop>
       <source src="https://msrvtt.s3.ca-central-1.amazonaws.com/videos/video9770.mp4" type="video/mp4">
     Your browser does not support the video tag.
-  </video>
+  </video></p>
 </div>
 
 <div class="center">
