--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     * {
       box-sizing: border-box;
     }
+    .pair-container{
+      display: flex;
+      align-items: center;
+      justify-content: center
+    }
+    
+    video {
+      max-width: 100%
+    }
+
+    .video {
+      flex-basis: 80%;
+      padding-right: 5%;
+      text-align: center;
+    }
+
+    .text {
+      font-size: 24px;
+      padding-left: 5%;
+      text-align: center;
+      margin-left: 1.5%;
+      margin-right: auto;
+    }
+    
     .img-container {
       float: left;
       width: 8%;
@@ -82,12 +106,17 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
   <p class="center" id="caption">a person is connecting something to system</p>
 </div> -->
 
-<div class="center">
-  <p id="caption">a person is connecting something to system</p>
-  <p style="float: right;"><video id="vid" width="320" height="240" autoplay muted loop>
+<div class="pair-container">
+  <div class="text">
+    <p id="caption">a person is connecting something to system</p>
+  </div>
+  
+  <div class="video">
+    <video id="vid" width="320" height="240" autoplay muted loop>
       <source src="https://msrvtt.s3.ca-central-1.amazonaws.com/videos/video9770.mp4" type="video/mp4">
     Your browser does not support the video tag.
-  </video></p>
+    </video>
+  </div>
 </div>
 
 <div class="center">
