--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     .text {
       font-size: 24px;
       text-align: center;
-      /*padding-right: 10%;*/
+      padding-right: 10%;
       width: 40%;
     }
     
