--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
 </div>
 
 <div class="video">
-  <p id="caption"><span style="color: #ad4442"><strong>Text</strong></span><br>a person is connecting something to system</p>
+  <p id="caption" style="color: #ad4442"><strong>Video</strong></p>
 </div>
 <div class="video">
   <video id="vid" width="320" height="240" autoplay muted loop>
