--- a/index.html
+++ b/index.html
@@ -35,16 +35,6 @@
       font-size: 24px;
       font-family: "Times New Roman";
     }
-    .video {
-      margin-left: 1.5%;
-      margin-right: auto;
-      width: 100%;
-      padding-left: 5%;
-      padding-right: 5%;
-      text-align: center;
-      font-size: 24px;
-      font-family: "Times New Roman";
-    }
     .abstract {
       margin-left: 1.5%;
       width: 100%;
@@ -81,7 +71,7 @@ The following demo shows the attentions weights that X-Pool assigns to the frame
   <p id="caption"><span style="color: #ad4442"><strong>Text</strong></span><br>a person is connecting something to system</p>
 </div>
 
-<div class="video">
+<div class="center">
   <p id="caption" style="color: #ad4442; margin-bottom:3px;"><strong>Video</strong></p>
   <video id="vid" width="320" height="240" autoplay muted loop>
     <source src="https://msrvtt.s3.ca-central-1.amazonaws.com/videos/video9770.mp4" type="video/mp4">
