--- a/index.html
+++ b/index.html
@@ -35,8 +35,17 @@
       font-size: 24px;
       font-family: "Times New Roman";
     }
+    .center2 {
+      width: 100%;
+      padding-left: 5%;
+      padding-right: 5%;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      text-align: center;
+      font-size: 24px;
+      font-family: "Times New Roman";
+    }
     .abstract {
-      margin-left: 1.5%;
       width: 100%;
       padding-left: 20%;
       padding-right: 20%;
@@ -50,9 +59,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <body onload="random()" style="background-color: rgb(168, 225, 247);">
 
-  <p class=center style="font-size: 48px;"><span style="color: #ad4442"><strong>X-Pool</strong></span><br>Cross-Modal Language-Video Attention for Text-Video Retrieval</p>
+  <p class=center2 style="font-size: 48px;"><span style="color: #ad4442"><strong>X-Pool</strong></span><br>Cross-Modal Language-Video Attention for Text-Video Retrieval</p>
   
-<p class=center style="font-size: 32px;">Abstract</p>   
+<p class=center2 style="font-size: 32px;">Abstract</p>   
 <p class=abstract>
 In text-video retrieval, the objective is to learn a cross-modal similarity function between a text and a video that ranks relevant text-video pairs higher than irrelevant pairs. However, videos inherently express a much wider gamut of information than texts. Instead, texts often capture sub-regions of entire videos and are most semantically similar to certain frames within videos. Therefore, for a given text, a retrieval model should focus on the text’s most semantically similar video sub-regions to make a more relevant comparison. Yet, most existing works aggregate entire videos without directly considering text. Common text-agnostic aggregations schemes include mean-pooling or self-attention over the frames, but these are likely to encode misleading visual information not described in the given text. To address this, we propose a cross-modal attention model called X-Pool that reasons between a text and the frames of a video. Our core mechanism is a scaled dot product attention for a text to attend to its most semantically similar frames. We then generate an aggregated video representation conditioned on the text’s attention weights over the frames. We evaluate our method on three benchmark datasets of MSR-VTT, MSVD and LSMDC, achieving new state-of-the-art results by up to 8% in relative improvement in Recall@1. Our findings thereby highlight the importance of joint text-video reasoning to extract important visual cues according to text.
 </p>
@@ -61,17 +70,17 @@ In text-video retrieval, the objective is to learn a cross-modal similarity func
 The following demo shows the attentions weights that X-Pool assigns to the frames a video given a particular text. All text-video pairs are generated from the MSR-VTT dataset's 1K-A test split.
 </p>
   
-<div class="center">
+<div class="center2">
   <button id="generate_button" name="Generate" value="Generate" onclick="random()" style="font-size: 24px; font-family: 'Times New Roman'; color: #ad4442; font-weight : bold;">
     Generate
   </button>
 </div>
   
-<div class="center">
+<div class="center2">
   <p id="caption"><span style="color: #ad4442"><strong>Text</strong></span><br>a person is connecting something to system</p>
 </div>
 
-<div class="center">
+<div class="center2">
   <p id="caption" style="color: #ad4442; margin-bottom:5px;"><strong>Video</strong></p>
   <video id="vid" width="320" height="240" autoplay muted loop>
     <source src="https://msrvtt.s3.ca-central-1.amazonaws.com/videos/video9770.mp4" type="video/mp4">
